third_party/move/move-compiler-v2/tests/lambda/inline-parity/same_names.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/same_names.move:30:13
   │
30 │         foo(|x, y| { assert!(x.len() + y.len() == 1, 1) }, x, y)
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
